// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title correct render should match snapshot after animation 1`] = `
<DocumentFragment>
  <h1
    id="title"
  >
    <span>
      f
    </span>
    <span>
      r
    </span>
    <span>
      o
    </span>
    <span>
      n
    </span>
    <span>
      t
    </span>
    <span>
      e
    </span>
    <span>
      n
    </span>
    <span>
      d
    </span>
    <span>
       
    </span>
    <span>
      m
    </span>
    <span>
      e
    </span>
    <span>
      n
    </span>
    <span>
      t
    </span>
    <span>
      o
    </span>
    <span>
      r
    </span>
    <span>
      —
    </span>
    <span>
      c
    </span>
    <span>
      h
    </span>
    <span>
      a
    </span>
    <span>
      l
    </span>
    <span>
      l
    </span>
    <span>
      e
    </span>
    <span>
      n
    </span>
    <span>
      g
    </span>
    <span>
      e
    </span>
    <span>
      s
    </span>
  </h1>
</DocumentFragment>
`;

exports[`Title correct render should match snapshot before animation 1`] = `
<DocumentFragment>
  <h1
    id="title"
  >
    <span
      class="disabled"
    >
      f
    </span>
    <span
      class="disabled"
    >
      r
    </span>
    <span
      class="disabled"
    >
      o
    </span>
    <span
      class="disabled"
    >
      n
    </span>
    <span
      class="disabled"
    >
      t
    </span>
    <span
      class="disabled"
    >
      e
    </span>
    <span
      class="disabled"
    >
      n
    </span>
    <span
      class="disabled"
    >
      d
    </span>
    <span
      class="disabled"
    >
       
    </span>
    <span
      class="disabled"
    >
      m
    </span>
    <span
      class="disabled"
    >
      e
    </span>
    <span
      class="disabled"
    >
      n
    </span>
    <span
      class="disabled"
    >
      t
    </span>
    <span
      class="disabled"
    >
      o
    </span>
    <span
      class="disabled"
    >
      r
    </span>
    <span
      class="disabled"
    >
      —
    </span>
    <span
      class="disabled"
    >
      c
    </span>
    <span
      class="disabled"
    >
      h
    </span>
    <span
      class="disabled"
    >
      a
    </span>
    <span
      class="disabled"
    >
      l
    </span>
    <span
      class="disabled"
    >
      l
    </span>
    <span
      class="disabled"
    >
      e
    </span>
    <span
      class="disabled"
    >
      n
    </span>
    <span
      class="disabled"
    >
      g
    </span>
    <span
      class="disabled"
    >
      e
    </span>
    <span
      class="disabled"
    >
      s
    </span>
  </h1>
</DocumentFragment>
`;
